--- a/src/system.css
+++ b/src/system.css
@@ -78,6 +78,87 @@
   --color-white: #ffffff;
 
   /*
+   * Space scales
+   */
+
+  --space-scale-vertical: 24;
+
+  --space-scale-vertical-01: calc(var(--space-scale-vertical) * 0.125);
+  --space-scale-vertical-02: calc(var(--space-scale-vertical) * 0.25);
+  --space-scale-vertical-03: calc(var(--space-scale-vertical) * 0.5);
+  --space-scale-vertical-04: calc(var(--space-scale-vertical) * 1);
+  --space-scale-vertical-05: calc(var(--space-scale-vertical) * 1.5);
+  --space-scale-vertical-06: calc(var(--space-scale-vertical) * 2);
+  --space-scale-vertical-07: calc(var(--space-scale-vertical) * 2.5);
+  --space-scale-vertical-08: calc(var(--space-scale-vertical) * 3);
+  --space-scale-vertical-09: calc(var(--space-scale-vertical) * 3.5);
+  --space-scale-vertical-10: calc(var(--space-scale-vertical) * 4);
+  --space-scale-vertical-11: calc(var(--space-scale-vertical) * 4.5);
+
+  --space-scale-horizontal: 16;
+
+  --space-scale-horizontal-01: calc(var(--space-scale-horizontal) * 0.125);
+  --space-scale-horizontal-02: calc(var(--space-scale-horizontal) * 0.25);
+  --space-scale-horizontal-03: calc(var(--space-scale-horizontal) * 0.5);
+  --space-scale-horizontal-04: calc(var(--space-scale-horizontal) * 1);
+  --space-scale-horizontal-05: calc(var(--space-scale-horizontal) * 1.5);
+  --space-scale-horizontal-06: calc(var(--space-scale-horizontal) * 2);
+  --space-scale-horizontal-07: calc(var(--space-scale-horizontal) * 2.5);
+  --space-scale-horizontal-08: calc(var(--space-scale-horizontal) * 3);
+  --space-scale-horizontal-09: calc(var(--space-scale-horizontal) * 3.5);
+  --space-scale-horizontal-10: calc(var(--space-scale-horizontal) * 4);
+  --space-scale-horizontal-11: calc(var(--space-scale-horizontal) * 4.5);
+
+  /*
+   * Typography scales
+   */
+
+  --leading-scale: var(--space-scale-vertical);
+
+  --leading-scale-01: var(--space-scale-vertical-04);
+  --leading-scale-02: var(--space-scale-vertical-05);
+  --leading-scale-03: var(--space-scale-vertical-06);
+  --leading-scale-04: var(--space-scale-vertical-07);
+  --leading-scale-05: var(--space-scale-vertical-08);
+  --leading-scale-06: var(--space-scale-vertical-09);
+  --leading-scale-07: var(--space-scale-vertical-10);
+  --leading-scale-08: var(--space-scale-vertical-11);
+
+  --type-scale: 16;
+
+  --type-scale-01: 14;
+  --type-scale-02: 16;
+  --type-scale-03: 18;
+  --type-scale-04: 21;
+  --type-scale-05: 24;
+  --type-scale-06: 28;
+  --type-scale-07: 32;
+  --type-scale-08: 36;
+  --type-scale-09: 42;
+  --type-scale-10: 48;
+  --type-scale-11: 55;
+  --type-scale-12: 63;
+  --type-scale-13: 73;
+  --type-scale-14: 84;
+  --type-scale-15: 96;
+
+  --letter-spacing-scale-01: -0.006223544263;
+  --letter-spacing-scale-02: -0.01095977856;
+  --letter-spacing-scale-03: -0.0143006857;
+  --letter-spacing-scale-04: -0.01756085933;
+  --letter-spacing-scale-05: -0.01949232757;
+  --letter-spacing-scale-06: -0.02090295984;
+  --letter-spacing-scale-07: -0.0216048615;
+  --letter-spacing-scale-08: -0.02195411336;
+  --letter-spacing-scale-09: -0.02217859754;
+  --letter-spacing-scale-10: -0.02225738906;
+  --letter-spacing-scale-11: -0.02228743882;
+  --letter-spacing-scale-12: -0.02229689004;
+  --letter-spacing-scale-13: -0.02229945686;
+  --letter-spacing-scale-14: -0.02229992033;
+  --letter-spacing-scale-15: -0.02229999019;
+
+  /*
    * Color tokens
    */
 
@@ -98,6 +179,120 @@
   --color-text-muted: var(--color-grey-4);
   --color-text-inverted: var(--color-white);
   --color-text-inverted-muted: var(--color-grey-5);
+
+  /*
+   * Font tokens
+   */
+
+  --font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI,
+  Helvetica Neue, sans-serif, Apple Color Emoji, Segoe UI Emoji,
+  Segoe UI Symbol;
+
+  --font-size: calc((var(--type-scale) / 16) * 1rem);
+
+  --font-01-size: calc((var(--type-scale-01) / 16) * 1rem);
+  --font-02-size: calc((var(--type-scale-02) / 16) * 1rem);
+  --font-03-size: calc((var(--type-scale-03) / 16) * 1rem);
+  --font-04-size: calc((var(--type-scale-04) / 16) * 1rem);
+  --font-05-size: calc((var(--type-scale-05) / 16) * 1rem);
+  --font-06-size: calc((var(--type-scale-06) / 16) * 1rem);
+  --font-07-size: calc((var(--type-scale-07) / 16) * 1rem);
+  --font-08-size: calc((var(--type-scale-08) / 16) * 1rem);
+  --font-09-size: calc((var(--type-scale-09) / 16) * 1rem);
+  --font-10-size: calc((var(--type-scale-10) / 16) * 1rem);
+  --font-11-size: calc((var(--type-scale-11) / 16) * 1rem);
+  --font-12-size: calc((var(--type-scale-12) / 16) * 1rem);
+  --font-13-size: calc((var(--type-scale-13) / 16) * 1rem);
+  --font-14-size: calc((var(--type-scale-14) / 16) * 1rem);
+  --font-15-size: calc((var(--type-scale-15) / 16) * 1rem);
+
+  --line-height: calc(var(--leading-scale) / var(--type-scale));
+
+  --font-01-line-height: calc(var(--leading-scale-01) / var(--type-scale-01));
+  --font-02-line-height: calc(var(--leading-scale-01) / var(--type-scale-02));
+  --font-03-line-height: calc(var(--leading-scale-01) / var(--type-scale-03));
+  --font-04-line-height: calc(var(--leading-scale-02) / var(--type-scale-04));
+  --font-05-line-height: calc(var(--leading-scale-02) / var(--type-scale-05));
+  --font-06-line-height: calc(var(--leading-scale-02) / var(--type-scale-06));
+  --font-07-line-height: calc(var(--leading-scale-03) / var(--type-scale-07));
+  --font-08-line-height: calc(var(--leading-scale-03) / var(--type-scale-08));
+  --font-09-line-height: calc(var(--leading-scale-04) / var(--type-scale-09));
+  --font-10-line-height: calc(var(--leading-scale-04) / var(--type-scale-10));
+  --font-11-line-height: calc(var(--leading-scale-05) / var(--type-scale-11));
+  --font-12-line-height: calc(var(--leading-scale-05) / var(--type-scale-12));
+  --font-13-line-height: calc(var(--leading-scale-06) / var(--type-scale-13));
+  --font-14-line-height: calc(var(--leading-scale-07) / var(--type-scale-14));
+  --font-15-line-height: calc(var(--leading-scale-08) / var(--type-scale-15));
+
+  --font: var(--font-size) / var(--line-height) var(--font-family);
+
+  --font-01: var(--font-01-size) / var(--font-01-line-height) var(--font-family);
+  --font-02: var(--font-02-size) / var(--font-02-line-height) var(--font-family);
+  --font-03: var(--font-03-size) / var(--font-03-line-height) var(--font-family);
+  --font-04: var(--font-04-size) / var(--font-04-line-height) var(--font-family);
+  --font-05: var(--font-05-size) / var(--font-05-line-height) var(--font-family);
+  --font-06: var(--font-06-size) / var(--font-06-line-height) var(--font-family);
+  --font-07: var(--font-07-size) / var(--font-07-line-height) var(--font-family);
+  --font-08: var(--font-08-size) / var(--font-08-line-height) var(--font-family);
+  --font-09: var(--font-09-size) / var(--font-09-line-height) var(--font-family);
+  --font-10: var(--font-10-size) / var(--font-10-line-height) var(--font-family);
+  --font-11: var(--font-11-size) / var(--font-11-line-height) var(--font-family);
+  --font-12: var(--font-12-size) / var(--font-12-line-height) var(--font-family);
+  --font-13: var(--font-13-size) / var(--font-13-line-height) var(--font-family);
+  --font-14: var(--font-14-size) / var(--font-14-line-height) var(--font-family);
+  --font-15: var(--font-15-size) / var(--font-15-line-height) var(--font-family);
+
+  --letter-spacing: calc(var(--letter-spacing-scale-02) * 1em);
+
+  --font-01-letter-spacing: calc(var(--letter-spacing-scale-01) * 1em);
+  --font-02-letter-spacing: calc(var(--letter-spacing-scale-02) * 1em);
+  --font-03-letter-spacing: calc(var(--letter-spacing-scale-03) * 1em);
+  --font-04-letter-spacing: calc(var(--letter-spacing-scale-04) * 1em);
+  --font-05-letter-spacing: calc(var(--letter-spacing-scale-05) * 1em);
+  --font-06-letter-spacing: calc(var(--letter-spacing-scale-06) * 1em);
+  --font-07-letter-spacing: calc(var(--letter-spacing-scale-07) * 1em);
+  --font-08-letter-spacing: calc(var(--letter-spacing-scale-08) * 1em);
+  --font-09-letter-spacing: calc(var(--letter-spacing-scale-09) * 1em);
+  --font-10-letter-spacing: calc(var(--letter-spacing-scale-10) * 1em);
+  --font-11-letter-spacing: calc(var(--letter-spacing-scale-11) * 1em);
+  --font-12-letter-spacing: calc(var(--letter-spacing-scale-12) * 1em);
+  --font-13-letter-spacing: calc(var(--letter-spacing-scale-13) * 1em);
+  --font-14-letter-spacing: calc(var(--letter-spacing-scale-14) * 1em);
+  --font-15-letter-spacing: calc(var(--letter-spacing-scale-15) * 1em);
+
+  --font-feature-settings-logotype: "cpsp", "cv06", "cv11";
+
+  /*
+   * Space tokens
+   */
+
+   --space-vertical: calc((var(--space-scale-vertical) / 16) * 1rem);
+
+   --space-vertical-01: calc((var(--space-scale-vertical-01) / 16) * 1rem);
+   --space-vertical-02: calc((var(--space-scale-vertical-02) / 16) * 1rem);
+   --space-vertical-03: calc((var(--space-scale-vertical-03) / 16) * 1rem);
+   --space-vertical-04: calc((var(--space-scale-vertical-04) / 16) * 1rem);
+   --space-vertical-05: calc((var(--space-scale-vertical-05) / 16) * 1rem);
+   --space-vertical-06: calc((var(--space-scale-vertical-06) / 16) * 1rem);
+   --space-vertical-07: calc((var(--space-scale-vertical-07) / 16) * 1rem);
+   --space-vertical-08: calc((var(--space-scale-vertical-08) / 16) * 1rem);
+   --space-vertical-09: calc((var(--space-scale-vertical-09) / 16) * 1rem);
+   --space-vertical-10: calc((var(--space-scale-vertical-10) / 16) * 1rem);
+   --space-vertical-11: calc((var(--space-scale-vertical-11) / 16) * 1rem);
+
+   --space-horizontal: calc((var(--space-scale-horizontal) / 16) * 1rem);
+
+   --space-horizontal-01: calc((var(--space-scale-horizontal-01) / 16) * 1rem);
+   --space-horizontal-02: calc((var(--space-scale-horizontal-02) / 16) * 1rem);
+   --space-horizontal-03: calc((var(--space-scale-horizontal-03) / 16) * 1rem);
+   --space-horizontal-04: calc((var(--space-scale-horizontal-04) / 16) * 1rem);
+   --space-horizontal-05: calc((var(--space-scale-horizontal-05) / 16) * 1rem);
+   --space-horizontal-06: calc((var(--space-scale-horizontal-06) / 16) * 1rem);
+   --space-horizontal-07: calc((var(--space-scale-horizontal-07) / 16) * 1rem);
+   --space-horizontal-08: calc((var(--space-scale-horizontal-08) / 16) * 1rem);
+   --space-horizontal-09: calc((var(--space-scale-horizontal-09) / 16) * 1rem);
+   --space-horizontal-10: calc((var(--space-scale-horizontal-10) / 16) * 1rem);
+   --space-horizontal-11: calc((var(--space-scale-horizontal-11) / 16) * 1rem);
 }
 
 /*
@@ -116,10 +311,9 @@
   background-color: var(--color-background);
   box-sizing: border-box;
   color: var(--color-text);
-  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI,
-    Helvetica Neue, sans-serif, Apple Color Emoji, Segoe UI Emoji,
-    Segoe UI Symbol;
-  line-height: 1.5;
+  font-family: var(--font-family);
+  line-height: var(--line-height);
+  letter-spacing: var(--letter-spacing);
 }
 
 .msrd *,
