--- a/src/system.css
+++ b/src/system.css
@@ -313,7 +313,7 @@
 @font-face {
   font-family: "Inter";
   font-weight: 100 900;
-  font-display: swap;
+  font-display: fallback;
   font-style: oblique 0deg 10deg;
   src: url("Inter.var.woff2?v=3.13") format("woff2");
 }
