--- a/src/system.css
+++ b/src/system.css
@@ -159,6 +159,8 @@
    *
    */
 
+  --tracking-scale: -0.01095977856; /* --type-scale-02 */
+
   --tracking-scale-01: -0.006223544263;
   --tracking-scale-02: -0.01095977856;
   --tracking-scale-03: -0.0143006857;
@@ -259,7 +261,7 @@
   --font-14: var(--font-14-size) / var(--font-14-line-height) var(--font-family);
   --font-15: var(--font-15-size) / var(--font-15-line-height) var(--font-family);
 
-  --letter-spacing: calc(var(--tracking-scale-02) * 1em);
+  --letter-spacing: calc(var(--tracking-scale) * 1em);
 
   --font-01-letter-spacing: calc(var(--tracking-scale-01) * 1em);
   --font-02-letter-spacing: calc(var(--tracking-scale-02) * 1em);
