--- a/components/Cards/Cards.css
+++ b/components/Cards/Cards.css
@@ -2,13 +2,12 @@
   display: flex;
   flex-wrap: wrap;
   gap: var(--space-vertical) var(--space-horizontal);
-  list-style: none;
   margin-bottom: 0;
   margin-top: 0;
   padding-left: 0;
 }
 
-.msrd .msrd-Cards li {
+.msrd .msrd-Card {
   border: solid 0.0625rem var(--color-grey-8);
   border-radius: 1rem;
   padding: var(--space-vertical-03) var(--space-horizontal)
@@ -17,24 +16,24 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  .msrd .msrd-Cards li {
+  .msrd .msrd-Card {
     border-color: var(--color-grey-2);
   }
 }
 
 @media (min-width: 40em) {
-  .msrd .msrd-Cards li {
+  .msrd .msrd-Card {
     width: calc((100% / 2) - (((2 - 1) / 2) * var(--space-horizontal)));
   }
 }
 
 @media (min-width: 64em) {
-  .msrd .msrd-Cards li {
+  .msrd .msrd-Card {
     width: calc((100% / 4) - (((4 - 1) / 4) * var(--space-horizontal)));
   }
 }
 
-.msrd .msrd-Cards p {
+.msrd .msrd-Card p {
   margin-bottom: 0;
   margin-top: 0;
 }
