feat: add support for Section width to Markdown

--- a/components/Section/Section.css
+++ b/components/Section/Section.css
@@ -8,3 +8,7 @@
   margin-right: auto;
   max-width: var(--section-max-width);
 }
+
+.msrd .msrd-Section--narrow .msrd-Section-inner {
+  max-width: var(--section-max-width-narrow);
+}
