feat: increase Header stacking level

--- a/components/Header/Header.css
+++ b/components/Header/Header.css
@@ -16,6 +16,7 @@ html {
   padding: var(--space-vertical-03) var(--space-horizontal);
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 
 @media (prefers-color-scheme: dark) {
